# rinsehq-backend

./: .env.example  .gitignore  BACKEND_SCOPE.md  Dockerfile  NOMBA_INTEGRATION.md  PAYMENT_GATEWAY_IMPLEMENTATION.md  README.md  SERVICES_ORDERS_FRONTEND.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_full_schema.py  003_password_reset_codes.py  004_order_line_item_service_id.py
scripts/: start.sh
src/rinsehq/: __init__.py  config.py  main.py  seed_cli.py
src/rinsehq/application/dtos/: auth.py  common.py  order.py
src/rinsehq/application/services/: order_line_items.py  order_pricing.py
src/rinsehq/application/use_cases/: auth_flows.py  create_order.py  dashboard_summary.py  finalize_order.py  get_order.py  list_orders.py  sign_in.py  sign_up.py  update_order.py
src/rinsehq/domain/entities/: account.py  customer.py  invoice.py  order.py  service.py  store.py  transaction.py  user.py
src/rinsehq/domain/repositories/: auth_repository.py  catalog_repository.py  order_repository.py  store_repository.py
src/rinsehq/domain/services/: email_service.py  payment_gateway.py  storage_service.py
src/rinsehq/infrastructure/: di.py  seed.py
src/rinsehq/infrastructure/auth/: context.py  permissions.py
src/rinsehq/infrastructure/db/: id_generator.py  models.py  session.py
src/rinsehq/presentation/: helpers.py
tests/: conftest.py  helpers.py  test_auth.py  test_dashboard.py  test_health.py  test_nomba_payments.py  test_order_pricing.py  test_order_services.py  test_orders.py
(+27 files in other folders)
